# mondayapi

./: .env_template  .gitignore  Dockerfile  README.md  app.py  coe.py  dockerfile  main.py  monday.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
api/: .env_template  main.py
data/: atualizacao.sql  create.sql
log/: log.py  logging.conf
models/: db.py  painel.py  projetos.py
pages/: login.py  painel.py  projetos.py  util.py
paginas/: login.py  painel.py  projetos.py  util.py
