[project]
name = "mondayapi"
version = "0.1.0"
description = ""
authors = [{ name = "Miguel Henriques", email = "github@jmh.com.br" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3",
    "python-dotenv>=1.0.1,<2",
    "pony>=0.7.17,<0.8",
    "streamlit[auth]>=1.31.1,<2",
    "pandas>=2.2.1,<3",
    "plotly>=5.19.0,<7",
    "streamlit-card>=1.0.0,<2",
    "psycopg2-binary>=2.9.10,<3",
    "ipython>=8.37.0",
]

[dependency-groups]
dev = ["ipython>=8.21.0,<9"]


